src/objects/ENC_Pregunta__c.object
<CustomObject>
    <description>Representa cada una de las preguntas de una Encuesta Tipo.</description>
    <fields>
        <fullName>ENP_CAS_Pregunta_Gremio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si está marcado que la pregunta debe tener una respuesta para cada uno de los Servicios de la Intervención.</description>
        <label>Preguntar por cada Gremio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENP_FOR_PrimeraPregunta__c</fullName>
        <description>Indica si la pregunta es la primera de la encuesta tipo padre.</description>
        <formula>ENP_LKP_Encuesta_Tipo__r.ENT_LKP_PrimeraPregunta__c = Id</formula>
        <label>Primera Pregunta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENP_LKP_Encuesta_Tipo__c</fullName>
        <description>Encuesta Tipo a la que pertenece la pregunta.</description>
        <label>Encuesta Tipo</label>
        <referenceTo>ENC_Encuesta_Tipo__c</referenceTo>
        <relationshipLabel>Encuestas Tipo: Pregunta</relationshipLabel>
        <relationshipName>Preguntas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ENP_LKP_Pregunta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pregunta principal a la que pertenece la pregunta en el caso de que sea una pregunta secundaria.</description>
        <label>Pregunta Principal</label>
        <referenceTo>ENC_Pregunta__c</referenceTo>
        <relationshipLabel>Preguntas Secundarias</relationshipLabel>
        <relationshipName>PreguntasSecundarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENP_SEL_Tipo_Respuesta__c</fullName>
        <description>Clasificación de la respuesta para poder visualizarla: Check/RadioButton/Picklist/Multipicklist/Texto/Número/Fecha</description>
        <label>Tipo Visual Respuesta</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipo_Respuesta_Encuesta</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENP_TXT_Identificador__c</fullName>
        <description>Identificador externo de la pregunta (valor del campo Name).</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ENP_TXT_Pregunta__c</fullName>
        <description>Texto de la pregunta.</description>
        <label>Pregunta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Encuesta Tipo: Pregunta</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encuestas Tipo: Pregunta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(ENP_TXT_Identificador__c ))),ISCHANGED(ENP_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK( ENP_TXT_Identificador__c),ISNULL( ENP_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>ENP_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>